2008-11-27:
    Added Ibkg to the interdiff model (not implemented previously)
    Added revival of the FOM vs generations plot after loading of data.

2008-11-26:
    Added documentation to the plugins.
    Added documentation to the data loaders.
    Fixed export scritp+export table bug. When asked to overwrite the file
    the program asks about the gx file.
    Implemented autosaving every X generation. If wanted by the user, default
     off.
    Also added also atosave, errobar level, parallel processeing alternatives
    to the optimizer settings dialog box.
    
2008-11-23:
    Added procssing as an package in the about box. 
    Added code so that the fit state also is saved to the model. 

2008-11-22: 
    Solved the problem with the convolute fast. All three methods
    give very similair results. However it is dependent on step size
    integration range etc.
    Added the possiblity to work with g/cm^3 as the density. Implemented
    a new scattering database for x-rays and neutrons fw, bw that makes
    this possible. Not tested yet.
    Added help frames for data loaders and plugins as well. The documentation
    still to be written.

2008-11-21:
    Fixed bug in exporting data sets to a dat file. Now it is a 
    data set 3 digits wide with zeros!. Also if an extension is added
    it will not overwrite it. Also added an header with the time that the
    data was exported - can be handy.
    Fixed the normalization problem that Gunnar found for reflectivity 
    measurements. Fixed it up and did a nice normalization of the 
    weight function in /lib/instrument.py. However Convolute fast with
    varying resolution does not work.

2008-11-20:
    Implemented parallel processing for the model calculation
    with the help of the processing package. Tested and seems to work
    under Linux. However I only see a about 50% speed increase could it 
    be that I have some over head?

2008-11-08: